# k8s.py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml  python-test.yaml
examples/: 01-simple_apply.py  02-yaml.py
examples/manifests/: nginx.yaml
k8s/: __init__.py  namespace.py
k8s/local/: minikube.py
k8sutils/: __init__.py  namespace.py
k8sutils/annotations/: __init__.py
k8sutils/crds/: __init__.py  utils.py
k8sutils/deployments/: __init__.py  utils.py
k8sutils/local/: kind.py  minikube.py
tests/: test_annotations.py  test_yaml.py
