[build-system]
requires = ["setuptools", "wheel","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "k8sutils"
version = "0.1.0"
description = "Kubernetes helper module for Python"
authors = ["Rui Vieira <ruidevieira@googlemail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
termcolor = "^1.1.0"
prettytable = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
