[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8sutils"
version = "0.1.1"
description = "Kubernetes helper module for Python"
authors = [{ name = "Rui Vieira", email = "ruidevieira@googlemail.com" }]
license = { text = "Apache License Version 2.0" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["k8s", "kubernetes", "utilities"]
dependencies = [
    "requests==2.25.1",
    "termcolor==1.1.0",
    "prettytable==2.1.0"
]
requires-python = ">=3.8"


[project.optional-dependencies]
dev = ["pytest==6.2.2"]
